--- a/index.html
+++ b/index.html
@@ -35,9 +35,14 @@
         <div class="nav-content">
             <menu class="menu">
                 <ul class="container">
-                    <li><a href="#" class="active ico-envelop" role="menuitem">E-mails</a></li>
-                    <li><a href="#" role="menuitem" class="ico-plus">Novo e-mail</a></li>
-                    <li><a href="#" role="menuitem" class="ico-checkmark-circle">Configurações</a></li>
+                    <li><a href="#" class="ico-envelop" role="menuitem">E-mails</a></li>
+                    <li><a href="#" role="menuitem" class="active ico-plus">Novo e-mail</a></li>
+                    <li><a href="#" role="menuitem" class="ico-checkmark-circle">Configurações de conta</a>
+                        <ul>
+                            <li><a href="#" role="menuitem">Adicionar</a></li>
+                            <li><a href="#" role="menuitem">Acesso atual</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#" role="menuitem" class="visible-xs ico-exit">Logoff</a></li>
                 </ul>
             </menu>
